syntax = "proto3";

package proto;

message RouteWeight {
    string bus_name = 1;
    double total_time = 2;
    uint32 span_count = 3;
}

message Edge {
    uint32 vertex_id_from = 1;
    uint32 vertex_id_to = 2;
    RouteWeight weight = 3;
}

message IncidenceList {
    repeated uint32 edges_id = 1;
}

message EdgeOptional {
    uint32 edge_id = 1;
}

message DirectedWeightedGraph {
    repeated Edge edges = 1;
    repeated IncidenceList incidence_list = 2;
}

message RouteInternalData {
    RouteWeight route_weight = 1;
    EdgeOptional prev_edge = 2; 
}

message OptionalRouteInternalData {
    RouteInternalData data = 1;
}

message RoutesInternalData {
    repeated OptionalRouteInternalData routes_internal_data = 1;
}

message Router {
    repeated RoutesInternalData routes_data = 1;
}