syntax = "proto3";

import "graph.proto";

package proto;

message RouteSettings {
    double bus_wait_time = 1;
    double bus_velocity = 2;
}

message TransportRouter {
    RouteSettings settings = 1;
    DirectedWeightedGraph graph = 2;
    Router router = 3;
}